--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:backgroundTint="@color/yellow"
     tools:context=".MainActivity">
 
     <TableLayout
@@ -15,13 +16,13 @@
             android:id="@+id/emptyTopRow"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1" />
+            android:layout_weight="5" />
 
         <TableRow
             android:id="@+id/titleRow"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="0.25"
+            android:layout_weight="1"
             android:gravity="center_horizontal">
 
             <TextView
@@ -39,6 +40,7 @@
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:gravity="center">
 
             <Spinner
@@ -48,6 +50,7 @@
                 android:background="@color/white"
                 android:dropDownSelector="@color/dark_blue"
                 android:entries="@array/forSpinner"
+                android:minHeight="48dp"
                 android:textAlignment="center" />
 
         </TableRow>
@@ -56,42 +59,44 @@
             android:id="@+id/startRow"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="0.25"
+            android:layout_weight="1"
             android:gravity="center_horizontal">
 
             <Button
                 android:id="@+id/startBtn"
-                android:layout_width="fill_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal|center_vertical"
+                android:layout_gravity="center_vertical"
                 android:backgroundTint="@color/yellow"
                 android:text="@string/start"
                 android:textColor="@color/black"
                 android:textSize="28sp" />
+
         </TableRow>
 
         <TableRow
             android:id="@+id/viewQuizzesRow"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="0.25"
+            android:layout_weight="1"
             android:gravity="center_horizontal">
 
             <Button
                 android:id="@+id/viewQuizzesBtn"
-                android:layout_width="fill_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal|center_vertical"
                 android:backgroundTint="@color/yellow"
                 android:text="@string/viewQuizzes"
                 android:textColor="@color/black"
                 android:textSize="28sp" />
+
         </TableRow>
 
         <TableRow
             android:id="@+id/emptyBottomRow"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1" />
+            android:layout_weight="5" />
     </TableLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
